Import font family

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,3 +4,14 @@ $light-grayish-cyan: hsl(180, 52%, 96%);
 $very-light-grayish-cyan: hsl(180, 31%, 95%);
 $dark-grayish-cyan: hsl(180, 8%, 52%);
 $very-dark-grayish-cyan: hsl(180, 14%, 20%);
+
+// Font weights
+
+$fw-semi-bold: 500;
+$fw-bold: 700;
+
+body {
+	font-family: "League Spartan", sans-serif;
+	font-size: 15px;
+	font-weight: $fw-bold;
+}
