--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,57 @@ $fw-bold: 700;
 
 body {
 	font-family: "League Spartan", sans-serif;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: $fw-bold;
+	background-color: $light-grayish-cyan;
+}
+
+.bg-header-img {
+	background-color: $desaturated-dark-cyan;
+}
+
+.container {
+	max-width: 1200px;
+	width: 88%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.filter {
+	background-color: white;
+	padding: 20px;
+	margin-top: -24px;
+	position: relative;
+	z-index: 1;
+	border-radius: 4px;
+	display: flex;
+	gap: 20px;
+
+	.filter-items {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 16px;
+		flex: 1;
+
+		.filter-item {
+			display: flex;
+
+			.filtered-field {
+				color: $desaturated-dark-cyan;
+				padding: 8px;
+				background-color: $light-grayish-cyan;
+				border-radius: 4px 0 0 4px;
+			}
+
+			.remove-icon {
+				background-color: $desaturated-dark-cyan;
+				padding: 8px;
+				border-radius: 0 4px 4px 0;
+			}
+		}
+	}
+
+	.clear-filter-btn {
+		color: $dark-grayish-cyan;
+	}
 }
