--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ body {
 }
 
 .container {
-	max-width: 1200px;
+	max-width: 1100px;
 	width: 88%;
 	margin-left: auto;
 	margin-right: auto;
@@ -33,12 +33,13 @@ body {
 .filter {
 	background-color: $white;
 	padding: 20px;
-	margin-top: -24px;
+	margin-top: -32px;
 	position: relative;
 	z-index: 1;
 	border-radius: 4px;
 	display: flex;
 	gap: 20px;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 	.filter-items {
 		display: flex;
@@ -60,12 +61,23 @@ body {
 				background-color: $desaturated-dark-cyan;
 				padding: 8px;
 				border-radius: 0 4px 4px 0;
+				cursor: pointer;
+				transition: background-color 200ms ease;
+
+				&:hover {
+					background-color: $very-dark-grayish-cyan;
+				}
 			}
 		}
 	}
 
 	.clear-filter-btn {
 		color: $dark-grayish-cyan;
+
+		&:hover {
+			color: $desaturated-dark-cyan;
+			text-decoration: underline;
+		}
 	}
 }
 
@@ -84,7 +96,7 @@ body {
 
 		&.featured {
 			border-left: 6px solid $desaturated-dark-cyan;
-			padding: 20px 20px 20px 18px;
+			padding-left: 18px;
 		}
 
 		.logo {
@@ -162,6 +174,57 @@ body {
 				background-color: $light-grayish-cyan;
 				padding: 8px;
 				border-radius: 4px;
+				cursor: pointer;
+				transition: all 200ms ease;
+
+				&:hover {
+					background-color: $desaturated-dark-cyan;
+					color: $white;
+				}
+			}
+		}
+	}
+}
+
+@media (width > 376px) {
+	body {
+		font-size: 18px;
+	}
+
+	.filter {
+		padding: 28px;
+	}
+
+	.list {
+		.list-item {
+			display: flex;
+			align-items: center;
+			gap: 28px;
+			padding: 28px;
+
+			&.featured {
+				border-left: 6px solid $desaturated-dark-cyan;
+				padding-left: 26px;
+			}
+
+			.logo {
+				width: 90px;
+				height: 90px;
+				margin: unset;
+			}
+
+			.job-info {
+				flex: 1;
+				border-bottom: none;
+
+				.position {
+					font-size: 20px;
+				}
+			}
+
+			.job-requirements {
+				margin-top: unset;
+				font-size: 18px;
 			}
 		}
 	}
